Remove --enable-preview cruft