@@ -4,7 +4,6 @@ dependencies {
 
 tasks.named('test') {
 	useTestNG()
-	jvmArgs(['--enable-preview'])
 }
 
 sonarlintMain {
